--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -5,13 +5,23 @@ footer{
     padding: 90px 0 0;
     font-family: $fontLato;
 
+    @include breakpoint(phablet){
+        font-size: 11px;
+    }
+
     .footer-first{
         display: flex;
         justify-content: space-between;
         max-width: 1140px;
         margin:0 auto;
         padding: 0 get-vw(60px);
-        padding-bottom: 130px;
+        padding-bottom: 130px; 
+        @include breakpoint(phablet){
+            display: inline-block;
+            padding: 0;
+            margin: 0;
+        }
+
     }
 
     .footer-seconde{
@@ -40,9 +50,21 @@ footer{
 
     .bloc-footer{
         width: 33.33%;
+        @include breakpoint(phablet){
+            width: 100%;
+        }
        
         &:first-child{
             text-align: center;
+            @include breakpoint(phablet){
+                display: flex;
+                text-align: left;
+
+                img{
+                    width: 20%;
+                    height:20%;
+                }
+            }
         }
 
         &:first-child{
@@ -54,6 +76,9 @@ footer{
                 line-height: 1.6em;
                 padding: 30px 40px 0;
                 letter-spacing: 4px;
+                @include breakpoint(phablet){
+                    font-size: 11px;
+                }
             }
             p::before{
                 @extend .line;
@@ -65,6 +90,9 @@ footer{
 
         &:nth-child(2){
             font-size: 13px;
+            @include breakpoint(phablet){
+                font-size: 11px;
+            }
         }
 
         &_link{
@@ -83,6 +111,12 @@ footer{
             span{
                 color: #767676;
             }
+
+            &:nth-child(2){
+                @include breakpoint(phablet){
+                    display: none;
+                }
+            }
         }
     }
 
@@ -92,6 +126,9 @@ footer{
         text-transform: uppercase;
         font-weight: 800;
         margin-bottom: 50px;
+        @include breakpoint(phablet){
+            margin-bottom: 20px;
+        }
     }
 
     ul{
