--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -7,18 +7,55 @@ header{
     font-family: $fontOpen;
     text-transform: uppercase;
     font-size: 13px;
+    @include breakpoint(phablet){
+        padding: 10px;
+    }
 
     nav{
         display: flex;
         justify-content: space-around;
+        @include breakpoint(phablet){
+            position: fixed;
+            display: inline;
+            top: -100%;
+            transition: 0.2s all ease-in-out;
+            width: 100%;
+            height: 100%;
+            background: $backDark;
+            left: 0;
+            padding-top:5vh;
+        }
+
+        &.nav-resp{
+            @include breakpoint(phablet){
+                top: 0;
+            }
+        }
     }
 
     ul{
         display: flex;
         align-items: center;
+        @include breakpoint(phablet){
+            display: inline;
+        }
         li{
             list-style: none;
             margin: 0 10px;
+            @include breakpoint(phablet){
+                width: 100%;
+                text-align: center;
+                font-size: get-vw-m(20px);
+                margin: 20px 0;
+            }
+        }
+    }
+
+    .social{
+        @include breakpoint(phablet){
+           float: right;
+           width: 33%;
+           margin-top: 30px;
         }
     }
 
@@ -27,10 +64,52 @@ header{
         left: 50%;
         top: 25%;
         transform: translate(-50%);
+        @include breakpoint(phablet){
+            display: none;
+        }
     }
 
     a{
         color: $fontWhite;
+    }
+
+    .responsive-menu{
+        display: none;
+        width: 100%;
+        @include breakpoint(phablet){
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+    }
+
+    .sandwich{
+        position: relative;
+        z-index: 200000000;
+        top: 0;
+        right: 0;
+        width: 50px;
+        height: 50px;
+        background: none;
+        span{
+            content: '';
+            position: absolute;
+            width: 50px;
+            height: 3px;
+            left: 0;
+            background: $fontWhite;
+
+           &.top{
+                top: 10px;
+            }
+            &.middle{
+                top: 20px;
+            }
+            &.bottom{
+                top: 30px;
+            }
+        }
+
     }
 
     .shop{
