--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -17,7 +17,7 @@ header{
         @include breakpoint(phablet){
             position: fixed;
             display: inline;
-            top: -100%;
+            top: -200%;
             transition: 0.2s all ease-in-out;
             width: 100%;
             height: 100%;
@@ -87,7 +87,7 @@ header{
         position: relative;
         z-index: 200000000;
         top: 0;
-        right: 0;
+        right: 10vw;
         width: 50px;
         height: 50px;
         background: none;
@@ -107,6 +107,20 @@ header{
             }
             &.bottom{
                 top: 30px;
+            }
+        }
+
+        &.open{
+            span{
+               &.top{
+                    transform: rotate(90deg);
+                }
+                &.middle{
+                    top: 20px;
+                }
+                &.bottom{
+                    transform: rotate(90deg);
+                }
             }
         }
 
